@@ -1,3 +1,8 @@
+2006-05-05  Wouter Bolsterlee  <uws+gnome@xs4all.nl>
+
+	* data/ui/epiphany-ui.xml: Added a close item on the tab
+	right-click menu. Also reindented the XML file.
+
 2006-05-03  Takeshi AIHANA <takeshi.aihana@gmail.com>
 
 	* help/ja/ja.po:
